--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
   </div>
   
   <script src="js/app.js"></script>
-  <script src="js/info.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js').then(
+        function(registration) {
+          console.log('SW register: OK');
+          console.log(registration);
+        }, 
+        function(err) {
+          console.log('SW register: FAILED. Cause: ', err);
+        }
+      );
+    }
+  </script>
 
 </body>
 </html>
