--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="js/app.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js').then(
+      navigator.serviceWorker.register('/pwa/sw.js').then(
         function(registration) {
           console.log('SW register: OK');
           console.log(registration);
